--- a/profi_med/backend/apps/product/templates/product_list.html
+++ b/profi_med/backend/apps/product/templates/product_list.html
@@ -1,34 +1,33 @@
 {% extends 'base_tabler.html'%}
 
+<div class="bgded overlay" style="background-image:url('./static/images/giphy.gif');">
+
 {% block title %}
-list_product
-
+Мед. Персонал
 {% endblock %}
-{% block content %}
 
-{% for post in products %}
- <div class="card shadow-sm">
+{% block product %}
+ {% for products in page_obj %}
+ <section id="introblocks">
+      <ul class="nospace group">
+        <li class="one_third">
+          <figure>
+              <a style="" class="imgover" href="">
+                  <img style="width:200px" src="{{products.image.url}}">
+              </a>
+<!--              <a style="width:400px" class="imgover">-->
+<!--            <img src="{{products.image}}" alt="200px" class="card-img-top">-->
+<!--          </a>-->
+            <figcaption>
+              <h6 class="heading">{{products.name}}</h6>
+              <p>{{products.descriptions}}</p>
+            </figcaption>
+              <div class="text-muted"><h3>{{products.price}}сом</h3> </div>
 
-           <h3> {{ post.image.url }}</h3>
+          </figure>
+        </li>
 
-            <div class="card-body">
-              <p class="card-text"> {{ post.name }}</p>
-
-                Главрач зав.отделения
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">
-                    перейти
-                  </button>
-                </div>
-                <small class="text-muted">{{ product.price }}</small>
-              </div>
-            </div>
-          </div>
-
-
-
+      </ul>
+    </section>
 {% endfor %}
-aslkdmsdlkfmsdlkfm
 {% endblock %}
